# cozify-temp

./: Dockerfile  README.md  cozify-all-temperature.py  cozify-sample-loop.py  cozify-single-sample.py  csv-import.py  legacy-single-sample.py  main.cfg.dist  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
cozifytemp/: cache.py  config.py  sample_loop.py  single_sample.py  storage.py  util.py
legacy/: cozify-thingspeak-loop.py  legacy-single-sample.py
tools/: csv-import.py
