[tool.poetry]
name = "cozifytemp"
version = "0.1.7"
description = "Sample Cozify sensor to influxdb logger"
authors = ["Artanicus <artanicus@nocturnal.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
pytz = "^2021.1"
cozify = "^0.2.33"
influxdb-client = "^1.19.0"
requests = "^2.26.0"
absl-py = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.343"
black = ">=23.12.1,<25.0.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cozifytemp-single-sample = 'cozifytemp.single_sample:main'
cozifytemp-sample-loop = 'cozifytemp.sample_loop:run'
